# ext2reader

./: .gitignore  .gitmodules  CMakeLists.txt
src/: ext2reader.c
